--- a/UI.ui
+++ b/UI.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>старт</string>
     </property>
    </widget>
   </widget>
